--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -70,6 +70,7 @@ hr.star-primary:after {
 header {
   text-align: center;
   background: #18BC9C;
+  /* background: #808080; */
   color: white;
 }
 header .container {
@@ -129,7 +130,7 @@ header .intro-text .skills {
   color: white;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #18BC9C;
+  /* color: #18BC9C; */
   outline: none;
 }
 .navbar-custom .navbar-nav li a:focus,
@@ -138,13 +139,13 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-nav li.active a {
   color: white;
-  background: #18BC9C;
+  /* background: #18BC9C; */
 }
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
   color: white;
-  background: #18BC9C;
+  /* background: #18BC9C; */
 }
 .navbar-custom .navbar-toggle {
   color: white;
@@ -154,9 +155,9 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #18BC9C;
+  /* background-color: #18BC9C; */
   color: white;
-  border-color: #18BC9C;
+  /* border-color: #18BC9C; */
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -188,7 +189,7 @@ section h2 {
   font-size: 4em;
 }
 section.success {
-  background: #18BC9C;
+  /* background: #18BC9C; */
   color: white;
 }
 @media (max-width: 767px) {
