--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -212,7 +212,7 @@ section.success {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .caption {
-  background: rgba(24, 188, 156, 0.9);
+  /* background: rgba(24, 188, 156, 0.9); */
   position: absolute;
   width: 100%;
   height: 100%;
