--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -307,6 +307,7 @@ footer h3 {
 footer .footer-above {
   padding-top: 50px;
   background-color: #2C3E50;
+  /* background-color: white; */
 }
 footer .footer-col {
   margin-bottom: 50px;
