--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -456,7 +456,8 @@ fieldset[disabled] .btn-success.active {
   box-shadow: none;
   border: none;
   min-height: 100%;
-  padding: 100px 0;
+  /* padding: 100px 0; */
+  padding: 50px 0;
   text-align: center;
 }
 .portfolio-modal .modal-content h2 {
@@ -471,18 +472,19 @@ fieldset[disabled] .btn-success.active {
 }
 .portfolio-modal .close-modal {
   position: absolute;
-  width: 75px;
-  height: 75px;
+  width: 45px;
+  height: 45px;
   background-color: transparent;
-  top: 25px;
+  top: 17px;
   right: 25px;
   cursor: pointer;
+  z-index: 1000;
 }
 .portfolio-modal .close-modal:hover {
   opacity: 0.3;
 }
 .portfolio-modal .close-modal .lr {
-  height: 75px;
+  height: 45px;
   width: 1px;
   margin-left: 35px;
   background-color: #2C3E50;
@@ -494,7 +496,7 @@ fieldset[disabled] .btn-success.active {
   z-index: 1051;
 }
 .portfolio-modal .close-modal .lr .rl {
-  height: 75px;
+  height: 45px;
   width: 1px;
   background-color: #2C3E50;
   transform: rotate(90deg);
