update social media links

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -328,7 +328,7 @@ footer .footer-below {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-  color: #18BC9C;
+  /* color: #18BC9C; */
   background: white;
   border: solid 2px white;
 }
